----------

- Made mail-in processing with aliased distribution lists respect the
  'system_list_subdomain' setting, if configured.  (LP #824014)

- When restoring an object from the trash, if a conflicting name is
  in the container, append a suffix to the name.  (LP #821206)

- Fixed a DST issue in the versions.format_local_date() function which
  formats a date for display in versioning UIs.

3.70 (2011-08-25)
-----------------

- The statistics option is now hidden in the admin UI if no statistics have
  been generated yet.  (LP #821204)

- Fixed bug in Wiki Page version preview where the title was always from the
  current version rather than the version being previewed.  (LP #823552)

- Updated the calendar to use cookies instead of a persistent session.

- Added special handling in error page for read only errors.

- 'last_login_time' is now only saved for a user if Karl is not in read only
  mode, in order to allow users to log in when in read only mode without an
  error.

- Add locking to Wiki pages. Users are notified via a status-like message when
  viewing a page that is currently being edited.

3.69 (2011-08-04)
-----------------

- Add in tagusers.html view for profiles

- HTML is now stripped from wiki links for the purposes of generating a title.
  (LP #811107)

- Hook up the `generate_stats` script for use with karlserve. (LP #812444)

- Added onChange handlers for the author and tags fields on the search results
  page to automatically submit their respective forms.  (LP #784257)

- Added versioning and trash folder for Wiki Pages using Shane's 'repozitory'.
  Merged from 'branches/rossi_repozitory'.

- Fixed UnicodeDecodeError encountered while reindexing text data on staging.
  Made improvements to the text from html extracter.

- Default to active view for /communities

- Modify advanced button text on blog page to read "Advanced" instead of
  "Administer". (LP #820547)

- Fix layout issue on community search results page (LP #820523)
